[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/button_theme.tres" type="Theme" id=1]
[ext_resource path="res://resources/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/AnimatedButton.gd" type="Script" id=3]
[ext_resource path="res://assets/button.png" type="Texture" id=4]
[ext_resource path="res://sounds/select2.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/select.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 18, 18 )
margin_left = 5.0
margin_right = 5.0
margin_top = 7.0
margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 18, 18 )
margin_left = 5.0
margin_right = 5.0
margin_top = 7.0
margin_bottom = 5.0
modulate_color = Color( 0.478431, 0.478431, 0.478431, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Animation" id=2]
resource_name = "hover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_min_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 96, 25 ), Vector2( 112, 25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 96, 25 ), Vector2( 112, 25 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "click"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -3.0, 0.0 ]
}

[node name="AnimatedButton" type="Button"]
margin_right = 96.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 25 )
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 48, 12 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "TEXTO TESTE"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
anims/hover = SubResource( 2 )

[node name="ClickAnimationPlayer" type="AnimationPlayer" parent="."]
anims/click = SubResource( 3 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Select2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0

[connection signal="mouse_entered" from="." to="." method="_on_AnimatedButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_AnimatedButton_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_AnimatedButton_pressed"]
